work on features

--- a/addon-app/src/main/resources/application-dev.properties
+++ b/addon-app/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #### disable liquibase
 spring.liquibase.enabled=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/gamesaledb
+spring.datasource.url=jdbc:mysql://localhost:3306/budgetdb
 spring.datasource.username=appuser
 spring.datasource.password=appuserpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
