--- a/dev-infra/docker-compose.yml
+++ b/dev-infra/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: gamesaledb
+      MYSQL_DATABASE: budgetdb
       MYSQL_USER: appuser
       MYSQL_PASSWORD: appuserpassword
     ports:
